syntax = "proto3"; //指定版本
// 定义命名空间
option csharp_namespace = "Grpc.Server.Demo";
// 指定包名，避免冲突
package user;
// 定义Student 的 message类型
message Student {
  string UserName = 1;
  int32 Age=2;
  string addr = 3;
}


// 查询学生时传递的类型
message QueryStudentRequest
{
	string UserName=1;
}
// 查询全部学生，没有条件，但也需要一个空的message
message QueryAllStudentRequest
{
}

// 上传图片
message UploadImgRequest{
	bytes data = 1;
}
// 公共返回类型
message CommonResponse{
	int32 code =1;
	string msg=2;
}

// 添加学生时传递的类型
message AddStudentRequest{
	Student student=1;

}
message StudentResponse {
  Student student =1;
}

message TokenRequest{
	string UserName=1;
	string UserPwd=2;
}
message TokenResponse{
	string Token =1;
}

// 约定需要提供的服务方法
service StudentService{
	rpc GetToken(TokenRequest) returns (TokenResponse);
	// 简单模式，查询
	rpc GetStudentByUserName(QueryStudentRequest) returns (StudentResponse);
	// 服务端流模式
	rpc GetAllStudent(QueryAllStudentRequest) returns (stream StudentResponse);
	// 客户端流模式
	rpc UploadImg(stream UploadImgRequest) returns (CommonResponse);
	// 双向流模式
	rpc AddManyStudents(stream AddStudentRequest) returns (stream StudentResponse);
}


